@@ -97,6 +97,10 @@ let i=$i+1;solver[$i]="Petsc CLI      { -ksp_type cg -pc_type asm -sub_pc_type s
 #let i=$i+1;solver[$i]="Petsc GCP      { seuil $seuil precond ILU { level 1 } impr }"				;sym[$i]=1	# Hypre decevant, on prend ILU petsc meilleur
 #let i=$i+1;solver[$i]="Petsc GCP      { seuil $seuil precond PILUT { level 20 epsilon 0.01 } impr }"		;sym[$i]=1	# PILUT instead ILUT because CHANGES in the PETSc 3.6 Version: Removed -pc_hypre_type euclid due to bit-rot
 
+# CG + ILU BLR de MUMPS et STRUMPACK
+let i=$i+1;solver[$i]="Petsc GCP      { seuil $seuil precond ILU_MUMPS     { epsilon 1.e-4 } impr }"		;sym[$i]=1	
+let i=$i+1;solver[$i]="Petsc GCP      { seuil $seuil precond ILU_STRUMPACK { epsilon 1.e-4 } impr }"		;sym[$i]=1	
+
 # CG + BLOCK JACOBI ILU PETSC
 let i=$i+1;solver[$i]="Petsc GCP      { seuil $seuil precond BLOCK_JACOBI_ICC { level 1 } impr }"		;sym[$i]=1	;rank[$i]=8;		
 
