@@ -6,10 +6,10 @@ then
    ranking=`ls -rt ranking.* | tail -1`
    if [ "`grep parallele $ranking`" = "" ]
    then
-      ./check_ranking `ls -rt ranking.* | tail -1` 798 2.e-5 34 0.048
+      ./check_ranking `ls -rt ranking.* | tail -1` 804 2.e-5 34 0.048
       err=$?
    else
-      ./check_ranking `ls -rt ranking.* | tail -1` 885 2.e-5 65 0.070
+      ./check_ranking `ls -rt ranking.* | tail -1` 887 2.e-5 65 0.070
       err=$?
    fi
 fi
