@@ -1,3 +1,4 @@
+XX/XX/23 (TRUST) New keyword  : Add two ILU preconditioners based on Block Low Ranking parametrized (epsilon) compression: petsc gcp|gmres { precond ilu_mumps|ilu_strumpack { epsilon value } ... }. May be useful on problems with solver slow convergence.
 XX/XX/23 (TRUST) New keyword  : Add "petsc LU_Strumpack { }" as direct solver from STRUMPACK library
 XX/XX/23 (TRUST) Library      : Update PETSc to 3.20.0 (dependancies like MUMPS, Hypre,... not updated yet)
 --------------------------------------------------------------------------------------------------
